<resources>
    <string name="app_name">KrishiNetwork</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="image">Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="todo">TODO</string>
    <string name="fetch">FETCH</string>
    <string name="crop_image">crop image</string>
</resources>